# vgi-pdf

./: .dockerignore  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-entrypoint.sh  pdf_worker.py  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  run-integration.sh
test/sql/: forms_render.test  hostile.test  structure.test
tests/: fixtures.py  harness.py  test_core.py  test_scalars.py  test_tables.py
vgi_pdf/: __init__.py  core.py  meta.py  scalars.py  schema_utils.py  tables.py  worker.py
