[project]
name = "vgi-pdf"
version = "0.1.0"
description = "Extract PDF structure (tables, word boxes, geometry, forms, rendering) for DuckDB via VGI"
readme = "README.md"
keywords = [
    "duckdb",
    "apache-arrow",
    "vgi",
    "sql",
    "pdf",
    "tables",
    "bounding-box",
    "render",
    "pdfplumber",
    "pypdfium2",
    "pikepdf",
]
license = { file = "LICENSE" }
authors = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "vgi-python>=0.15.0",
    "pdfplumber>=0.11",
    "pypdfium2>=4.30",
    "pikepdf>=9",
    "Pillow>=10",
    "pyarrow",
]

[project.optional-dependencies]
# HTTP transport: the worker can serve over HTTP (`pdf_worker.py --http`)
# in addition to stdio. That path needs vgi-python's `http` extra (waitress).
# CI's http transport leg installs this via `uv sync --extra http`.
http = [
    "vgi-python[http]>=0.15.0",
]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
    "pydoclint",
    "reportlab>=4",
]


[tool.vgi-lint-check.options]
# VGI315: the `pdf` argument is deliberately polymorphic -- a VARCHAR path OR a
# BLOB of raw bytes. Every function offers both, so the VARCHAR/BLOB "type drift"
# is intentional API design, not an inconsistency; skip the name.
type_consistency_ignore_names = ["pdf"]

[tool.vgi-lint-check.execution]
# VGI908: the executable examples drive real PDFs through pdfplumber's layout
# engine, which is intrinsically a few seconds per call even on tiny fixtures.
# Raise the slow-example threshold so these expected costs don't warn.
slow_seconds = 25

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_pdf"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
# The PEP 723 inline-script header wraps dependency pins that should stay one-per-line.
"pdf_worker.py" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
style = "google"
arg_type_hints_in_docstring = false
check_return_types = false
check_yield_types = false
check_class_attributes = true
skip_checking_raises = true
allow_init_docstring = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["pypdfium2", "pdfplumber", "pdfplumber.*"]
ignore_missing_imports = true
